[metadata]
name = mas500dr
version = 0.0.1
license = BSD 3-Clause License
license_file = LICENSE
description = MAS500 data reduction pipeline
long_description = file: README.md

[options]
packages = mas500dr
install_requires =
    requests
    ccdproc>=2.2.0
    importlib; python_version == "3.8"

[options.entry_points]
console_scripts = 
    autoredux = mas500dr.pipeline:main
